--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
+
 {
   "name": "totalzone",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,7 +12,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.5.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "vite": "^4.5.0"
   }
 }
