--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "new-test": "turbo gen test",
     "clean": "lerna clean -y && lerna bootstrap && lerna run clean && lerna exec 'node ../../scripts/rm.mjs dist'",
     "build": "turbo run build --remote-cache-timeout 60 --summarize true",
-    "export-static": "cd packages/next && next build && next export",
+    "export-static": "npx next build packages/next && npx next export packages/next"
     "lerna": "lerna",
     "dev": "turbo run dev --parallel",
     "pack-next": "tsx scripts/pack-next.ts",
