--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "new-test": "turbo gen test",
     "clean": "lerna clean -y && lerna bootstrap && lerna run clean && lerna exec 'node ../../scripts/rm.mjs dist'",
     "build": "turbo run build --remote-cache-timeout 60 --summarize true",
-    "export-static": "npx next build packages/next && npx next export packages/next"
     "lerna": "lerna",
     "dev": "turbo run dev --parallel",
     "pack-next": "tsx scripts/pack-next.ts",
@@ -83,7 +82,8 @@
     "storybook": "turbo run storybook",
     "build-storybook": "turbo run build-storybook",
     "test-storybook": "turbo run test-storybook",
-    "with-rspack": "cross-env NEXT_RSPACK=1 NEXT_TEST_USE_RSPACK=1"
+    "with-rspack": "cross-env NEXT_RSPACK=1 NEXT_TEST_USE_RSPACK=1",
+    "export-static": "npx next build packages/next && npx next export packages/next"
   },
   "devDependencies": {
     "@actions/core": "1.10.1",
