--- a/nextjs-starter-medusa-main/package.json
+++ b/nextjs-starter-medusa-main/package.json
@@ -8,7 +8,7 @@
     "medusa-storefront"
   ],
   "scripts": {
-    "build": "react-scripts build",
+    "build": "react-scripts build"
     "dev": "next dev --turbopack -p 8000",
     "build": "next build",
     "start": "next start -p 8000",
